--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-light navbar-fixed-top">
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
+      &#9776;
+    </button>
+    <div class="collapse navbar-toggleable-xs" id="topNav">
+      <ul class="nav navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" data-scroll href="#about-card">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-scroll href="#skills">Menus</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-scroll href="#work">Contact</a>
+        </li>
+      <!--  <a class="navbar-brand" href="#"><img src="img/leuca.svg"></a> -->
+        <li class="nav-item">
+          <a class="nav-link" data-scroll href="#partners">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-scroll href="#contact">Press</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-scroll href="#contact">Events</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="container-fluid">
     <div class="row section" id="intro">
       <img src="img/leuca.svg">
@@ -48,7 +77,7 @@
         </div>
       </div>
       <div class="col-sm-6 centered-col">
-        <img src="img/Table+II_NF.jpg">
+        <img src="img/table.png">
       </div>
     </div>
     <div class="row section" id="contact">
@@ -103,11 +132,37 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-4">
+
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
+  <script>
+  $(document).ready(function() {
+    var scroll_start = 0;
+    var startchange = $('#about');
+    var offset = startchange.offset();
+    if (startchange.length) {
+      $(document).scroll(function() {
+        scroll_start = $(this).scrollTop();
+        if (scroll_start > offset.top) {
+          $("nav").css('opacity', '1');
+        } else {
+          $("nav").css('opacity', '0');
+        }
+      });
+    }
+  });
+</script>
 </body>
 
 </html>
