--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <a href="#">VIEW MENU</a>
         </div>
       </div>
-      <div class="col-sm-6 centered-col">
+      <div class="col-sm-6">
         <img src="img/table.png">
       </div>
     </div>
@@ -134,16 +134,16 @@
       </div>
     </div>
     <div class="row section scroll-default" id="gallery">
-      <div class="col-xs-12 centered-col">
+      <div class="col-xs-12">
         <h2 class="section-title">Gallery</h2>
         <img src="img/Grandma_Ravioli_NoahFecks.jpg">
       </div>
     </div>
     <div class="row section scroll-default" id="events">
-      <div class="col-sm-4 centered-col">
+      <div class="col-sm-5">
         <img src="img/Screen Shot 2016-09-27 at 1.38.55 PM.png">
       </div>
-      <div class="col-sm-8 centered-col">
+      <div class="col-sm-7 centered-col">
         <h2 class="section-title private">Private Events</h2>
         <h1>This versatile open-air venue atop Westlight features a spectacular, unobstructed 180-degree panoramic view of the five boroughs and beyond.</h1>
         <a href="#">Book Event</a>
