--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
     </div>
     <div class="row section scroll-default" id="menus">
       <div class="col-sm-6 centered-col">
-        <h2 class="section-title">Menus</h2>
+        <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
         <div class="col-sm-6">
-          <h1 class="breakfast">Breakfast</h1>
-          <p>SERVED 7AM TO 11AM</p>
+          <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
+          <p class="text-xs-center text-sm-left">SERVED 7AM TO 11AM</p>
           <a href="#">VIEW MENU</a>
-          <h1 class="dinner">Dinner</h1>
-          <p class="overflow-fix">SUN - THURS | 5:30PM - 11PM<br>FRI - SAT | 5:30PM - 12AM</p>
+          <h1 class="dinner text-xs-center text-sm-left">Dinner</h1>
+          <p class="overflow-fix text-xs-center text-sm-left">SUN - THURS | 5:30PM - 11PM<br>FRI - SAT | 5:30PM - 12AM</p>
           <a href="#">VIEW MENU</a>
         </div>
         <div class="col-sm-6">
-          <h1 class="lunch">Lunch</h1>
-          <p>SERVED 11:30AM TO 3:30PM</p>
+          <h1 class="lunch text-xs-center text-sm-left">Lunch</h1>
+          <p class="text-xs-center text-sm-left">SERVED 11:30AM TO 3:30PM</p>
           <a href="#">VIEW MENU</a>
-          <h1 class="wine">Wine &amp; Spirits</h1>
-          <p>SERVED ALL DAY</p>
+          <h1 class="wine text-xs-center text-sm-left">Wine &amp; Spirits</h1>
+          <p class="text-xs-center text-sm-left">SERVED ALL DAY</p>
           <a href="#">VIEW MENU</a>
         </div>
       </div>
