--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
     <div class="row section scroll-default" id="gallery">
       <div class="col-xs-12">
         <h2 class="section-title">Gallery</h2>
+        <img id="left" src="img/left.svg">
         <img src="img/Grandma_Ravioli_NoahFecks.jpg">
+        <img id="right" src="img/right.svg">
       </div>
     </div>
     <div class="row section scroll-default" id="events">
