--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
           <p class="text-xs-center text-sm-left">SERVED 7AM TO 11AM</p>
           <a href="#">VIEW MENU</a>
           <h1 class="dinner text-xs-center text-sm-left">Dinner</h1>
-          <p class="overflow-fix text-xs-center text-sm-left">SUN - THURS | 5:30PM - 11PM<br>FRI - SAT | 5:30PM - 12AM</p>
+          <p class="overflow-fix text-xs-center text-sm-left">SUN - THURS | 5:30PM - 11PM
+            <br>FRI - SAT | 5:30PM - 12AM</p>
           <a href="#">VIEW MENU</a>
         </div>
         <div class="col-sm-6">
@@ -172,8 +173,39 @@
   <footer>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-4">
-
+        <div class="col-xs-12 centered-col">
+          <form class="form-horizontal">
+            <fieldset>
+              <div class="form-group">
+                <label class="control-label" for="sighup">Sign up for our newsletter</label>
+                <input id="signup" name="signup" type="text" placeholder="Email Address" class="form-control input-md">
+                              <button id="submit" name="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2 centered-col">
+          <p>111 North 12th Street
+            <br>Brooklyn, NY 11249</p>
+        </div>
+        <div class="col-sm-2">
+          <p>Sunday thru Thursay
+            <br>7am to 11pm</p>
+        </div>
+        <div class="col-sm-2">
+          <p>Friday &amp; Saturday
+            <br>7am to 12:30am</p>
+        </div>
+        <div class="col-sm-2">
+          <p>t. 987 654 3210</p>
+        </div>
+        <div class="col-sm-4 logos">
+          <img src="img/facebook.svg">
+          <img src="img/instagram.svg">
+          <img src="img/twv.svg">
+          <img src="img/noho.svg">
         </div>
       </div>
     </div>
@@ -183,7 +215,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
-  <script src="js/jquery.scrollify.min.js"></script>
+  <!--  <script src="js/jquery.scrollify.min.js"></script> -->
   <!--  <script>
     $(function() {
       $.scrollify({
