--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     </div>
     <div class="row section scroll-default" id="about">
       <div class="col-sm-6 centered-col">
-        <img src="img/Yolks_III_NF.jpg">
+        <img src="img/about-img.png">
       </div>
       <div class="col-sm-6 centered-col about-text">
         <h2 class="section-title">About</h2>
-        <h1>Leuca, a Southern Italian restaurant open all day serving Carmellini's take on Italy's coastal cuisines in a casually elegant atmosphere.</h1>
+        <h1>Inspired by Southern Italy, Leuca is a neighborhood restaurant from Chef Andrew Carmellini's NoHo Hospitality Group, serving house-made pastas, wood-fired pizzas and rustic dishes in an elegant, sun-lit space.</h1>
       </div>
     </div>
     <div class="row section scroll-default" id="menus">
@@ -95,16 +95,15 @@
         <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
         <div class="col-sm-6">
           <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
-          <p class="text-xs-center text-sm-left">SERVED 7AM TO 11AM</p>
+          <p class="text-xs-center text-sm-left">Breakfast Daily 7AM to 11AM</p>
           <a href="#">VIEW MENU</a>
           <h1 class="dinner text-xs-center text-sm-left">Dinner</h1>
-          <p class="overflow-fix text-xs-center text-sm-left">SUN - THURS | 5:30PM - 11PM
-            <br>FRI - SAT | 5:30PM - 12AM</p>
+          <p class="text-xs-center text-sm-left">Dinner Daily 5:30PM to 11:00PM</p>
           <a href="#">VIEW MENU</a>
         </div>
         <div class="col-sm-6">
           <h1 class="lunch text-xs-center text-sm-left">Lunch</h1>
-          <p class="text-xs-center text-sm-left">SERVED 11:30AM TO 3:30PM</p>
+          <p class="text-xs-center text-sm-left">Lunch Daily 12PM to 3PM</p>
           <a href="#">VIEW MENU</a>
           <h1 class="wine text-xs-center text-sm-left">Wine &amp; Spirits</h1>
           <p class="text-xs-center text-sm-left">SERVED ALL DAY</p>
@@ -112,19 +111,19 @@
         </div>
       </div>
       <div class="col-sm-6">
-        <img src="img/table.png">
+        <img src="img/Leuaca_Menus.jpg">
       </div>
     </div>
     <div class="row section scroll-default" id="contact">
       <div class="col-sm-5 centered-col">
-        <img src="img/map.png">
+        <div id="map"></div>
       </div>
       <div class="col-sm-7 centered-col">
         <h2 class="section-title">Contact</h2>
         <div class="col-sm-6">
-          <h1>111 North 12th Street<br>Brooklyn, NY 11249</h1>
+          <a href="https://www.google.com/maps/place/111+N+12th+St,+Brooklyn,+NY+11249/@40.7221136,-73.9593687,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25942d4fd21b5:0x8478af1e2b73f606!8m2!3d40.7221096!4d-73.95718"><h1>111 North 12th Street<br>Brooklyn, NY 11249</h1></a>
           <br>
-          <h1>t. 987 654 3210</h1>
+          <a href="tel:17185815900"><h1>t. 718 581 5900</h1></a>
         </div>
         <div class="col-sm-6">
           <p>SUNDAY THRU THURSAY</p>
@@ -144,11 +143,11 @@
     </div>
     <div class="row section scroll-default" id="events">
       <div class="col-sm-5">
-        <img src="img/Screen Shot 2016-09-27 at 1.38.55 PM.png">
+        <img src="img/Leuca_PrivateEvents.jpg">
       </div>
       <div class="col-sm-7 centered-col">
         <h2 class="section-title private">Private Events</h2>
-        <h1>This versatile open-air venue atop Westlight features a spectacular, unobstructed 180-degree panoramic view of the five boroughs and beyond.</h1>
+        <h1>Leuca's private dining room accommodates up to 28 guests at a long, white marble dining table fully surrounded by hand-painted frescos inspire by the coastal Mediterranean. The room features its own cocktail bar, audio-visual and family-style menus by Chef Andrew Carmellini.</h1>
         <a href="#">Book Event</a>
         <h2 class="section-title cultural">Cultural Events</h2>
         <h1>Our cross-disciplinary cultural events feature established and emerging talents, each using The William Vale as their canvas in creative and unexpected ways.</h1>
@@ -158,15 +157,16 @@
     <div class="row section scroll-default" id="press">
       <div class="col-sm-5 centered-col">
         <h2 class="section-title">Press</h2>
-        <p class="text-uppercase">The New York Times</p>
+        <h1 class="text-uppercase">Coming Soon</h1>
+    <!--    <p class="text-uppercase">The New York Times</p>
         <h1>Social Life in Gotham</h1>
         <p class="text-uppercase">Eater</p>
         <h1>Carmellini Plans Wood-Fired Southern Italian Restaurant for William Vale Hotel</h1>
         <p class="text-uppercase">Brooklyn Magazine</p>
-        <h1>A True 24-Hour Brooklyn Experience</h1>
+        <h1>A True 24-Hour Brooklyn Experience</h1> -->
       </div>
       <div class="col-sm-7 centered-col">
-        <img src="img/Make_Cavatelli_NF.jpg">
+        <img src="img/Leuca_Press.jpg">
       </div>
     </div>
   </div>
@@ -215,8 +215,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
-  <!--  <script src="js/jquery.scrollify.min.js"></script> -->
-  <!--  <script>
+  <!-- <script src="js/jquery.scrollify.min.js"></script>
+    <script>
     $(function() {
       $.scrollify({
         interstitialSection: ".scrollify-section",
@@ -240,7 +240,7 @@
       if (startchange.length) {
         $(document).scroll(function() {
           scroll_start = $(this).scrollTop();
-          if (scroll_start > offset.top - 256) {
+          if (scroll_start > offset.top - 316) {
             $("#intro img").css('opacity', '0');
             $("#littleLeuca").css('opacity', '1');
           } else {
@@ -267,6 +267,157 @@
         });
       }
     });
+  </script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa19u4SxY-qBj_MnsRUTYdsoTlGv6L47E"></script>
+
+  <script type="text/javascript">
+    // When the window has finished loading create our google map below
+    google.maps.event.addDomListener(window, 'load', init);
+
+    function init() {
+      // Basic options for a simple Google Map
+      // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
+      var mapOptions = {
+        // How zoomed in you want the map to start at (always required)
+        zoom: 15,
+
+        // The latitude and longitude to center the map (always required)
+        center: new google.maps.LatLng(40.7221136, -73.9593687), // New York
+
+        // How you would like to style the map.
+        // This is where you would paste any style found on Snazzy Maps.
+        styles: [{
+          "featureType": "water",
+          "elementType": "geometry",
+          "stylers": [{
+            "color": "#e9e9e9"
+          }, {
+            "lightness": 17
+          }]
+        }, {
+          "featureType": "landscape",
+          "elementType": "geometry",
+          "stylers": [{
+            "color": "#f5f5f5"
+          }, {
+            "lightness": 20
+          }]
+        }, {
+          "featureType": "road.highway",
+          "elementType": "geometry.fill",
+          "stylers": [{
+            "color": "#ffffff"
+          }, {
+            "lightness": 17
+          }]
+        }, {
+          "featureType": "road.highway",
+          "elementType": "geometry.stroke",
+          "stylers": [{
+            "color": "#ffffff"
+          }, {
+            "lightness": 29
+          }, {
+            "weight": 0.2
+          }]
+        }, {
+          "featureType": "road.arterial",
+          "elementType": "geometry",
+          "stylers": [{
+            "color": "#ffffff"
+          }, {
+            "lightness": 18
+          }]
+        }, {
+          "featureType": "road.local",
+          "elementType": "geometry",
+          "stylers": [{
+            "color": "#ffffff"
+          }, {
+            "lightness": 16
+          }]
+        }, {
+          "featureType": "poi",
+          "elementType": "geometry",
+          "stylers": [{
+            "color": "#f5f5f5"
+          }, {
+            "lightness": 21
+          }]
+        }, {
+          "featureType": "poi.park",
+          "elementType": "geometry",
+          "stylers": [{
+            "color": "#dedede"
+          }, {
+            "lightness": 21
+          }]
+        }, {
+          "elementType": "labels.text.stroke",
+          "stylers": [{
+            "visibility": "on"
+          }, {
+            "color": "#ffffff"
+          }, {
+            "lightness": 16
+          }]
+        }, {
+          "elementType": "labels.text.fill",
+          "stylers": [{
+            "saturation": 36
+          }, {
+            "color": "#333333"
+          }, {
+            "lightness": 40
+          }]
+        }, {
+          "elementType": "labels.icon",
+          "stylers": [{
+            "visibility": "off"
+          }]
+        }, {
+          "featureType": "transit",
+          "elementType": "geometry",
+          "stylers": [{
+            "color": "#f2f2f2"
+          }, {
+            "lightness": 19
+          }]
+        }, {
+          "featureType": "administrative",
+          "elementType": "geometry.fill",
+          "stylers": [{
+            "color": "#fefefe"
+          }, {
+            "lightness": 20
+          }]
+        }, {
+          "featureType": "administrative",
+          "elementType": "geometry.stroke",
+          "stylers": [{
+            "color": "#fefefe"
+          }, {
+            "lightness": 17
+          }, {
+            "weight": 1.2
+          }]
+        }]
+      };
+
+      // Get the HTML DOM element that will contain your map
+      // We are using a div with id="map" seen below in the <body>
+      var mapElement = document.getElementById('map');
+
+      // Create the Google Map using our element and options defined above
+      var map = new google.maps.Map(mapElement, mapOptions);
+
+      // Let's also add a marker while we're at it
+      var marker = new google.maps.Marker({
+        position: new google.maps.LatLng(40.7221136, -73.9593687),
+        map: map,
+        title: 'Snazzy!'
+      });
+    }
   </script>
 </body>
 
