--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <nav class="navbar navbar-light navbar-fixed-top coverNav">
-    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
       &#9776;
     </button>
-    <div class="collapse navbar-toggleable-xs" id="topNav">
+    <div class="collapse navbar-toggleable-sm" id="topNav">
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link toAbout" data-scroll href="#about">About</a>
@@ -48,14 +48,18 @@
   <div class="container-fluid">
     <div class="row section scrollify-section" id="intro">
       <img id="introLogo" src="img/leuca.svg">
+      <div id="introButtons">
+        <a target="_blank" href="#">RESERVATIONS</a>
+        <a href="#contact">HOURS &amp; LOCATION</a>
+      </div>
       <img id="cog" src="img/bg2.svg">
     </div>
     <div class="row scrollify-section hidden-xs-down" id="bottomNav">
       <nav class="navbar navbar-light">
-        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="bottomNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="bottomNavbar" aria-expanded="false" aria-label="Toggle navigation">
           &#9776;
         </button>
-        <div class="collapse navbar-toggleable-xs" id="bottomNavbar">
+        <div class="collapse navbar-toggleable-sm" id="bottomNavbar">
           <ul class="nav navbar-nav">
             <li class="nav-item">
               <a class="nav-link toAbout" data-scroll href="#about">About</a>
@@ -186,7 +190,7 @@
       </div>
       <div class="row">
         <div class="col-sm-2 centered-col">
-          <p>111 North 12th Street
+          <p>111 North 12th St
             <br>Brooklyn, NY 11249</p>
         </div>
         <div class="col-sm-2">
