--- a/index.html
+++ b/index.html
@@ -97,7 +97,19 @@
       <img id="aboutPepper" class="parallax floating" src="img/pepper1.svg">
     </div>
     <div class="row section scroll-default" id="menus">
-      <div class="col-sm-6 centered-col">
+      <div class="col-xs-12 hidden-sm-up">
+        <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
+        <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
+        <a target="_blank" href="#">VIEW MENU</a>
+        <h1 class="lunch text-xs-center text-sm-left">Lunch</h1>
+        <a target="_blank" href="#">VIEW MENU</a>
+        <h1 class="dinner text-xs-center text-sm-left">Dinner</h1>
+        <a target="_blank" href="#">VIEW MENU</a>
+        <h1 class="wine text-xs-center text-sm-left">Wine &amp; Spirits</h1>
+        <a target="_blank" href="#">VIEW MENU</a>
+        <img src="img/Leuaca_Menus.jpg">
+      </div>
+      <div class="col-sm-6 centered-col hidden-xs-down">
         <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
         <div class="col-sm-6">
           <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
@@ -112,7 +124,7 @@
           <a target="_blank" href="#">VIEW MENU</a>
         </div>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6 hidden-xs-down">
         <img src="img/Leuaca_Menus.jpg">
       </div>
     </div>
