--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <nav class="navbar navbar-light navbar-fixed-top coverNav">
-    <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="topNav" aria-expanded="false" aria-label="Toggle navigation">
       &#9776;
     </button>
-    <div class="collapse navbar-toggleable-sm" id="topNav">
+    <div class="collapse navbar-toggleable-md" id="topNav">
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link toAbout" data-scroll href="#about">About</a>
@@ -29,7 +29,7 @@
         <li class="nav-item">
           <a class="nav-link toContact" data-scroll href="#contact">Contact</a>
         </li>
-        <li class="nav-item nav-item-logo hidden-xs-down">
+        <li class="nav-item nav-item-logo hidden-md-down">
           <a class="" href="#intro"><img id="littleLeuca2" src="img/leuca.svg"></a>
         </lI>
         <li class="nav-item">
@@ -54,12 +54,12 @@
       <img id="downArrow" class="floating" src="img/down.svg">
       <img id="cog" src="img/bg2.svg">
     </div>
-    <div class="row scrollify-section hidden-xs-down" id="bottomNav">
+    <div class="row scrollify-section hidden-md-down" id="bottomNav">
       <nav class="navbar navbar-light">
-        <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="bottomNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#topNav" aria-controls="bottomNavbar" aria-expanded="false" aria-label="Toggle navigation">
           &#9776;
         </button>
-        <div class="collapse navbar-toggleable-sm" id="bottomNavbar">
+        <div class="collapse navbar-toggleable-md" id="bottomNavbar">
           <ul class="nav navbar-nav">
             <li class="nav-item">
               <a class="nav-link toAbout" data-scroll href="#about">About</a>
@@ -129,17 +129,17 @@
       </div>
     </div>
     <div class="row section scroll-default" id="contact">
-      <div class="col-sm-5 centered-col">
+      <div class="col-md-5 centered-col">
         <div id="map"></div>
       </div>
-      <div class="col-sm-7 centered-col">
+      <div class="col-md-7 centered-col">
         <h2 class="section-title">Contact</h2>
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <a target="_blank" href="https://www.google.com/maps/place/111+N+12th+St,+Brooklyn,+NY+11249/@40.7221136,-73.9593687,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25942d4fd21b5:0x8478af1e2b73f606!8m2!3d40.7221096!4d-73.95718"><h1>111 North 12th Street<br>Brooklyn, NY 11249</h1></a>
           <br>
           <a href="tel:17185815900"><h1>t. 718 581 5900</h1></a>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <p class="text-uppercase">Breakfast Daily</p>
           <h1>7AM to 11AM</h1>
           <p class="text-uppercase">Lunch Daily</p>
@@ -252,7 +252,7 @@
     });
   </script>
   <script>
-    if ($(window).width() < 768) {
+    if ($(window).width() < 992) {
       $(".nav-item").click(function() {
         $(".navbar-toggler").click();
       });
@@ -273,7 +273,7 @@
   </script>
   <script>
     $(document).ready(function() {
-      if ($(window).width() > 768) {
+      if ($(window).width() > 992) {
         var scroll_start = 0;
         var startchange = $('#bottomNav');
         var offset = startchange.offset();
@@ -292,7 +292,7 @@
       }
     });
     $(window).resize(function() {
-      if ($(window).width() > 768) {
+      if ($(window).width() > 992) {
         var scroll_start = 0;
         var startchange = $('#bottomNav');
         var offset = startchange.offset();
