--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <img id="aboutPepper" class="parallax floating" src="img/pepper1.svg">
     </div>
     <div class="row section scroll-default" id="menus">
-      <div class="col-xs-12 hidden-sm-up">
+      <!--  <div class="col-xs-12 hidden-sm-up">
         <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
         <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
         <a target="_blank" href="#">VIEW MENU</a>
@@ -108,10 +108,13 @@
         <h1 class="wine text-xs-center text-sm-left">Wine &amp; Spirits</h1>
         <a target="_blank" href="#">VIEW MENU</a>
         <img src="img/Leuaca_Menus.jpg">
-      </div>
-      <div class="col-sm-6 centered-col hidden-xs-down">
+      </div> -->
+      <div class="col-sm-6 centered-col">
+        <!-- CHANGE TO hidden-xs-down -->
         <h2 class="section-title text-xs-center text-sm-left">Menus</h2>
         <div class="col-sm-6">
+          <h1 style="font-family:'Lusitana', serif;" class="text-xs-center text-sm-left">Coming Soon</h1></div>
+        <!--  <div class="col-sm-6">
           <h1 class="breakfast text-xs-center text-sm-left">Breakfast</h1>
           <a target="_blank" href="#">VIEW MENU</a>
           <h1 class="dinner text-xs-center text-sm-left">Dinner</h1>
@@ -122,7 +125,7 @@
           <a target="_blank" href="#">VIEW MENU</a>
           <h1 class="wine text-xs-center text-sm-left">Wine &amp; Spirits</h1>
           <a target="_blank" href="#">VIEW MENU</a>
-        </div>
+        </div> -->
       </div>
       <div class="col-sm-6 hidden-xs-down">
         <img src="img/Leuaca_Menus.jpg">
@@ -133,13 +136,14 @@
         <div id="map"></div>
       </div>
       <div class="col-md-7 centered-col">
-        <h2 class="section-title">Contact</h2>
         <div class="col-md-6">
+          <h2 class="section-title">Contact</h2>
           <a target="_blank" href="https://www.google.com/maps/place/111+N+12th+St,+Brooklyn,+NY+11249/@40.7221136,-73.9593687,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25942d4fd21b5:0x8478af1e2b73f606!8m2!3d40.7221096!4d-73.95718"><h1>111 North 12th Street<br>Brooklyn, NY 11249</h1></a>
           <br>
           <a href="tel:17185815900"><h1>t. 718 581 5900</h1></a>
         </div>
         <div class="col-md-6">
+          <h2 class="section-title">Hours</h2>
           <p class="text-uppercase">Breakfast Daily</p>
           <h1>7AM to 11AM</h1>
           <p class="text-uppercase">Lunch Daily</p>
@@ -153,9 +157,9 @@
       <div class="col-xs-12 col-xl-10 offset-xl-1">
         <h2 class="section-title">Gallery</h2>
         <img id="horseShoe" class="parallax floating" src="img/horseShoe.svg">
-        <img id="left" src="img/left.svg">
+        <!--    <img id="left" src="img/left.svg"> -->
         <img src="img/gallery-soon.png">
-        <img id="right" src="img/right.svg">
+        <!--    <img id="right" src="img/right.svg"> -->
       </div>
     </div>
     <div class="row section scroll-default" id="events">
@@ -163,7 +167,7 @@
         <img src="img/Leuca_PrivateEvents.jpg">
         <img id="downArrow2" class="parallax floating" src="img/down.svg">
       </div>
-      <div class="col-sm-7 col-xl-6">
+      <div class="col-sm-7 col-xl-5 offset-xl-1">
         <h2 class="section-title private">Private Events</h2>
         <h1>Leuca's private dining room accommodates up to 28 guests at a long, white marble dining table fully surrounded by hand-painted frescos inspire by the coastal Mediterranean. The room features its own cocktail bar, audio-visual and family-style menus by Chef Andrew Carmellini.</h1>
         <a target="_blank" href="#">Book Event</a>
@@ -173,9 +177,9 @@
       </div>
     </div>
     <div class="row section scroll-default" id="press">
-      <div class="col-sm-5 col-xl-4 offset-xl-1 centered-col">
+      <div class="col-sm-5 col-xl-5 centered-col">
         <h2 class="section-title">Press</h2>
-        <h1 style="visibility:hidden;">Coming Soon</h1>
+        <h1>Coming Soon</h1>
         <p class="text-uppercase" style="visibility:hidden;">The New York Times</p>
         <h1 style="visibility:hidden;">Social Life in Gotham</h1>
         <!--    <p class="text-uppercase">Eater</p> -->
@@ -266,7 +270,7 @@
 
       $(window).scroll(function() {
         $cog.css({
-          'transform': 'rotate(' + ($body.scrollTop() / bodyHeight * 360) + 'deg)' + 'scale(2.5)'
+          'transform': 'rotate(' + ($body.scrollTop() / bodyHeight * 180) + 'deg)' + 'scale(2.5)'
         });
       });
     });
